[package]
name = "dino-park-cis"
version = "0.0.1"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "dino-park-cis"
path = "src/main.rs"

[features]
default = []
local = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.7", version = "0.7" }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch = "0.4", version = "0.4", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.7.2", version = "0.7" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.7", version = "0.0.7" }
shared-expiry-get = "0.1"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4"
actix-web = "2.0"
actix-rt = "1.0"
actix-multipart = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.7"
failure = "0.1"
failure_derive = "0.1"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
futures = "0.3"
r2d2 = "0.8"
config = "0.10"
chrono = "0.4"
rusoto_core = "0.44"
rusoto_ssm = "0.44"
lazy_static = "1.4"
headers = "0.3"
reqwest = "0.10"

[dev-dependencies]
tokio = "0.2"
url = "2.1"
uuid = { version = "0.8", features = ["v5"] }
base64 = "0.12"
actix-http = "1.0"